tests/rosetta/out/C/abbreviations-easy.error
cc: exit status 1
/tmp/abbreviations-easy.c: In function ‘validate’:
/tmp/abbreviations-easy.c:138:19: warning: implicit declaration of function ‘upper’ [-Wimplicit-function-declaration]
  138 |         char *c = upper(cmd);
      |                   ^~~~~
/tmp/abbreviations-easy.c:138:19: warning: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
/tmp/abbreviations-easy.c:139:20: warning: initialization of ‘char *’ from ‘int’ makes pointer from integer without a cast [-Wint-conversion]
  139 |         char *ww = upper(w);
      |                    ^~~~~
/tmp/abbreviations-easy.c: In function ‘mochi_main’:
/tmp/abbreviations-easy.c:195:12: error: incompatible types when assigning to type ‘list_int’ from type ‘int’
  195 |     mins = 0;
      |            ^
/tmp/abbreviations-easy.c:201:17: error: incompatible types when initializing type ‘int’ using type ‘list_string’
  201 |   int results = validate(commands, words, mins);
      |                 ^~~~~~~~
/tmp/abbreviations-easy.c:205:50: error: request for member ‘data’ in something not a structure or union
  205 |     out1 = out1 + padRight(words.data[k], results.data[k].len) + " ";
      |                                                  ^
/tmp/abbreviations-easy.c:209:41: error: incompatible type for argument 1 of ‘join’
  209 |   printf("%s\n", "full words:  " + join(results, " "));
      |                                         ^~~~~~~
      |                                         |
      |                                         int
/tmp/abbreviations-easy.c:109:24: note: expected ‘list_string’ but argument is of type ‘int’
  109 | char *join(list_string xs, char *sep) {
      |            ~~~~~~~~~~~~^~
